--- a/.github/workflows/allsystem.yml
+++ b/.github/workflows/allsystem.yml
@@ -40,11 +40,11 @@ jobs:
           qmake -makefile
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-      - name: compile
+      - name: push
         uses: actions/upload-artifact@v3
-        with: 
-          name: windows test
-          path: README.md
+        with:
+            name: my-artifact ${{ matrix.node-version }}
+            path: ${{ github.workspace }}
 
   build-on-ubuntu-22:
     runs-on: ubuntu-22.04
