--- a/.github/workflows/allsystem.yml
+++ b/.github/workflows/allsystem.yml
@@ -39,15 +39,15 @@ jobs:
           qmake.exe class-manager.pro
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
-      - name: Create GitHub release
-        uses: marvinpinto/action-automatic-releases@latest
-        with:
-          repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: ${{ env.ReleaseVersion }}
-          title: ${{ env.ReleaseVersion }}
-          prerelease: false
-          files: |
-            artifacts/packages/*
+      # 根据查询到的版本号创建 release\n      
+      - name: Create Release    
+        id: create_release     
+        uses: actions/create-release@v1    
+        env:        
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}   
+        with:     
+          tag_name: '${{ steps.get_version.outputs.VERSION }}'
+          release_name: 'app ${{ steps.get_version.outputs.VERSION }}'
 
       
 
