--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -12,8 +12,6 @@ on:
     paths-ignore:
       - 'README.md'
       - 'LICENSE'
-  schedule:
-    - cron: '0 21 * * *'
 jobs:
   build-on-window-22:
     runs-on: windows-2022
@@ -42,4 +40,4 @@ jobs:
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       - name: ls
-        run: tree
+        run: ls
