--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -40,4 +40,7 @@ jobs:
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       - name: ls
-        run: ls
+        run: |
+          ls
+          cd debug
+          ls
