--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -39,7 +39,7 @@ jobs:
           qmake.exe class-manager.pro
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+      - name: cd
+        run: cd debug
       - name: ls
-        run: |
-          cd debug
-          ls
+        run: ls
