--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -40,4 +40,6 @@ jobs:
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       - name: ls
-        run: ls -F ./debug
+        run: |
+          cd debug
+          ls
