--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -41,5 +41,5 @@ jobs:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       - name: ls
         run: |
-          cd /d D:\a\class-manager-qt\class-manager-qt\debug
+          cd .\debug
           ls
