--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -47,5 +47,34 @@ jobs:
           mkdir app
           cp class-manager app
           cd app
-          linuxdeployqt class-manager
+          ls
+  build-on-window-22:
+    runs-on: windows-2022
+    steps:
+      - name: Check out repository code
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 1
+      - name: install boost
+        id: install-boost
+        uses: MarkusJx/install-boost@v2.4.1
+        with:
+          boost_version: '1.80.0'
+          platform_version: 2022
+          toolset: 'msvc'
+      - name: install qt
+        uses: jurplel/install-qt-action@v3
+        with:
+          version: '6.5.1'
+          host: 'windows'
+          target: 'desktop'
+          arch: 'win64_msvc2019_64'
+      - name: build demo
+        run: |
+          qmake.exe class-manager.pro
+        env:
+          BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
+      - name: cp
+          mkdir exe
+          cd ..
           ls
