--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -76,6 +76,7 @@ jobs:
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       - name: cp
+        run: |
           mkdir exe
           cd ..
           ls
