--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -79,7 +79,7 @@ jobs:
         run: |
           ls
           mkdir exe
-          cd debug
+          cd ./debug
           ls
           cd ..
           cd ..
