--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -72,7 +72,7 @@ jobs:
           arch: 'win64_msvc2019_64'
       - name: build demo
         run: |
-          qmake.exe class-manager.pro
+          mingw32-make.exe
         env:
           BOOST_ROOT: ${{ steps.install-boost.outputs.BOOST_ROOT }}
       - name: cp
