--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -31,7 +31,7 @@ jobs:
       - name: install qt
         uses: jurplel/install-qt-action@v3
         with:
-          version: '6.5.1'
+          version: '6.2.*'
           target: 'desktop'
       - name: build demo
         run: |
@@ -66,7 +66,7 @@ jobs:
       - name: install qt
         uses: jurplel/install-qt-action@v3
         with:
-          version: '6.5.1'
+          version: '6.2.*'
           host: 'windows'
           target: 'desktop'
           arch: 'win64_msvc2019_64'
