--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -72,7 +72,7 @@ jobs:
           arch: 'win64_msvc2019_64'
       - name: build demo
         run: |
-          qmake class-manager.pro
+          qmake
           ls
           mingw32-make.exe
         env:
