--- a/.github/workflows/testqt1.yml
+++ b/.github/workflows/testqt1.yml
@@ -68,4 +68,4 @@ jobs:
         run: |
           call "C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Auxiliary\Build\vcvarsall.bat" %vc_arch%
           qmake
-          nmake
+          mingw32-make.exe
