--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -32,7 +32,8 @@ jobs:
         arch: 'win64_msvc2019_64'
         archives: 'qtbase qtsvg'
         tools: 'tools_ifw tools_qtcreator qt.tools.qtcreator'
-        source: true
+        source: 'true'
+        setup-python: 'false'
     - name: Install Qt linux 
       if: matrix.os == 'ubuntu-latest'
       uses: jurplel/install-qt-action@v3
