--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -31,7 +31,7 @@ jobs:
         target: 'desktop'
         arch: 'win64_msvc2019_64'
         archives: 'qtbase qtsvg'
-        tools: 'tools_ifw tools_qtcreator qt.tools.qtcreator'
+        tools: 'tools_ifw tools_qtcreator,qt.tools.qtcreator'
         source: 'true'
         setup-python: 'false'
     - name: Install Qt linux 
