--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -27,7 +27,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       uses: jurplel/install-qt-action@v3
       with:
-        version: '6.2.*'
+        version: '5.12.2'
         target: 'desktop'
         arch: 'win64_msvc2019_64'
         archives: 'qtbase qtsvg'
@@ -62,5 +62,4 @@ jobs:
       if: matrix.os == 'windows-latest'
       shell: cmd
       run: |
-        nm
         mingw32-make
