--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -29,7 +29,7 @@ jobs:
       with:
         version: '5.12.2'
         target: 'desktop'
-        arch: 'mingw81_64'
+        arch: 'win32_mingw81'
     - name: Install Qt linux 
       if: matrix.os == 'ubuntu-latest'
       uses: jurplel/install-qt-action@v3
