--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -27,7 +27,8 @@ jobs:
       if: matrix.os == 'windows-latest'
       uses: jurplel/install-qt-action@v3
       with:
-        arch: 'win32_mingw81'
+        version: 6.0.0
+        arch: 'win64_mingw'
     - name: Install Qt linux 
       if: matrix.os == 'ubuntu-latest'
       uses: jurplel/install-qt-action@v3
