--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -27,7 +27,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       uses: jurplel/install-qt-action@v3
       with:
-        version: 6.0.0
+        version: '6.2.2'
         arch: 'win64_mingw'
     - name: Install Qt linux 
       if: matrix.os == 'ubuntu-latest'
