--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -66,11 +66,20 @@ jobs:
         cp release/class-manager.exe app
         cd app
         windeployqt class-manager.exe
+    - name: pack linux app
+      if: matrix.os == 'ubuntu-latest'
+      run: |
+        mkdir app
+        cp class-manager app
+    - name: pack mac app
+      if: matrix.os == 'macOS-latest'
+      run: |
+        mkdir app
+        cp class-manager app
     - name: Install zip
-      if: matrix.os == 'windows-latest'
       uses: montudor/action-zip@v1
     - name: zip app
       run: |
         zip -qq -r app.zip zpp
-        dir
+        ls
         
