--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -80,4 +80,9 @@ jobs:
     - name: gzip
       run: |
         tar -czvf app.tar.gz app
+    - name: Upload app
+      uses: actions/upload-artifact@v3
+      with:
+        name: app
+        path: app/app.*
         
