--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -84,5 +84,5 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: app
-        path: app/app-${{ matrix.os }}.*
+        path: app-${{ matrix.os }}.*
         
