--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -83,6 +83,6 @@ jobs:
     - name: Upload app
       uses: actions/upload-artifact@v3
       with:
-        name: app
+        name: app-${{ matrix.os }}
         path: app-${{ matrix.os }}.*
         
