--- a/.github/workflows/ls.yml
+++ b/.github/workflows/ls.yml
@@ -76,9 +76,7 @@ jobs:
       run: |
         mkdir app
         ls -ae
-        cp -r class-manager.app app
-        cd app
-        macdeployqt classmanager.app -dmg
+        cp class-manager.app/Contents/MacOS/class-manager app
     - name: gzip
       run: |
         tar -czvf app-${{ matrix.os }}.tar.gz app
